--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,25 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Tu tienda de deporte</title>
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="icon" href="./assets/images/favicon.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tu tienda de deporte</title>
-  <link rel="stylesheet" href="./assets/css/main.css" />
-  <link rel="icon" href="./assets/images/favicon.png" />
-</head>
-
-<body>
-  <header>
-    <include src="./partials/header.html"></include>
-  </header>
-  <main>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/section-one.html"></include>
-    <include src="./partials/section-two.html"></include>
-    <include src="./partials/footer.html"></include>
-  </main>
-
-</body>
-
+  <body>
+    <header>
+      <img src="" alt="" />
+    </header>
+    <main>
+      <section>
+        <h1>comienzos compartidos</h1>
+        <p>Todo lo que necesitan para volver al cole con ilusión</p>
+        <div><a href=""></a></div>
+      </section>
+      <section>
+        <p>historias, moda y ropa deportiva</p>
+        <h2>tu tienda de deporte</h2>
+        <p>
+          El deporte nos mantiene en forma. Nos mantiene alerta Nuestra ropa
+          deportiva para hombre y mujer te ofrece las últimas tecnologías, a la
+          altura de tu rendimiento, para que superes tu mejor marca personal.
+        </p>
+        <button>Comprar</button>
+      </section>
+      <section>
+        <p>¡Prepáralos con tus marcas favoritas!</p>
+        <h2>vuelta al cole</h2>
+        <ul>
+          <li>
+            <img src="" alt="" />
+            <p>Mochilas escolares</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <p>Estuches</p>
+          </li>
+          <li><img src="" alt="" />Bolsas de deporte</li>
+        </ul>
+        <button>Empezar ahora</button>
+      </section>
+    </main>
+    <footer>
+      <nav>
+        <ul>
+          <li>zapatilas</li>
+          <li>ropa</li>
+          <li>niño/a</li>
+          <li>destacados</li>
+          <li>tips</li>
+        </ul>
+        <ul>
+          <li>twitter</li>
+          <li>instagram</li>
+          <li>youtube</li>
+        </ul>
+      </nav>
+      <ul>
+        <li>&copy;2023</li>
+        <li>we run</li>
+      </ul>
+    </footer>
+  </body>
 </html>
