--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,13 +10,19 @@
 
   <body>
     <header>
-      <img src="" alt="" />
+      <a href="https://adalab.es/"
+        ><img src="../assets/images/ico-menu.svg" alt=""
+      /></a>
     </header>
     <main>
-      <section>
+      <section class="hero">
         <h1>comienzos compartidos</h1>
         <p>Todo lo que necesitan para volver al cole con ilusión</p>
-        <div><a href=""></a></div>
+        <div>
+          <a href=""
+            ><img src="../assets/images/ico-scroll-down.svg" alt=""
+          /></a>
+        </div>
       </section>
       <section>
         <p>historias, moda y ropa deportiva</p>
@@ -33,16 +39,22 @@
         <h2>vuelta al cole</h2>
         <ul>
           <li>
-            <img src="" alt="" />
+            <img src="../assets/images/lpbts-mod05-img01-desk.png" alt="" />
             <p>Mochilas escolares</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img src="../assets/images/lpbts-mod05-img04-mob.png" alt="" />
             <p>Estuches</p>
           </li>
-          <li><img src="" alt="" />Bolsas de deporte</li>
+          <li>
+            <img src="../assets/lpbts-mod05-img03-mob.png" alt="" />Bolsas de
+            deporte
+          </li>
         </ul>
         <button>Empezar ahora</button>
+        <div>
+          <a href=""><img src="../assets/images/ico-arrow.svg" alt="" /></a>
+        </div>
       </section>
     </main>
     <footer>
