update mobile version

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -34,7 +34,8 @@
               ><img
                 class="hero__icon--fig"
                 src="../assets/images/ico-scroll-down.svg"
-                alt=""/></a>
+                alt=""
+            /></a>
           </div>
         </article>
       </section>
@@ -48,58 +49,67 @@
         </p>
         <button class="sectionone__button">Comprar</button>
       </section>
-      <section class="sectiontwo">
-        <p class="sectiontwo__text">¡Prepáralos con tus marcas favoritas!</p>
-        <h2 class="sectiontwo__title">vuelta al cole</h2>
-        <ul class="sectiontwo__articles">
+
+      <section class="container">
+        <p class="container__text">¡Prepáralos con tus marcas favoritas!</p>
+        <h2 class="container__title">vuelta al cole</h2>
+        <ul class="container__articles">
           <li>
             <img
-              class="sectiontwo__articles--school"
+              class="container__articles--img"
               src="../assets/images/lpbts-mod05-img01-desk.png"
               alt=""
             />
-            <p>Mochilas escolares</p>
+            <p class="container__articles--description">Mochilas escolares</p>
           </li>
           <li>
             <img
-              class="sectiontwo__articles--case"
+              class="container__articles--img"
               src="../assets/images/lpbts-mod05-img04-mob.png"
               alt=""
             />
-            <p>Estuches</p>
+            <p class="container__articles--description">Estuches</p>
           </li>
           <li>
             <img
-              class="sectiontwo__articles--deport"
-              src="../assets/images/lpbts-mod05-img04-mob.png"
+              class="container__articles--img"
+              src="../assets/images/lpbts-mod05-img03-mob.png"
               alt=""
-            />Bolsas de deporte
+            />
+            <p class="container__articles--description">Bolsa de deporte</p>
           </li>
         </ul>
-        <button class="buttontwo">Empezar ahora</button>
-        <div class="arrowtwo">
-          <a href=""><img src="../assets/images/ico-arrow.svg" alt="" /></a>
-        </div>
+
+        <a href="" class="container__buttontwo">Empezar ahora</a>
       </section>
     </main>
+
     <footer class="footer">
-      <nav>
-        <ul class="footer__articles">
-          <li>zapatilas</li>
-          <li>ropa</li>
-          <li>niño/a</li>
-          <li>destacados</li>
-          <li>tips</li>
+      <div class="footer__arrowup">
+        <a href=""
+          ><img src="../assets/images/ico-arrow.svg" alt="Ir arriba"
+        /></a>
+      </div>
+      <nav class="footer__nav">
+        <ul class="footer__nav--articles">
+          <li><a href="https://adalab.es/">zapatilas</a></li>
+          <li><a href="https://adalab.es/">ropa</a></li>
+          <li><a href="https://adalab.es/">niño/a</a></li>
+          <li><a href="https://adalab.es/">destacados</a></li>
+          <li><a href="https://adalab.es/">tips</a></li>
         </ul>
-        <ul class="footer__networks">
-          <li>twitter</li>
-          <li>instagram</li>
-          <li>youtube</li>
+        <ul class="footer__nav--networks">
+          <li><a href="https://adalab.es/">twitter</a></li>
+          <li><a href="https://adalab.es/">instagram</a></li>
+          <li><a href="https://adalab.es/">youtube</a></li>
         </ul>
       </nav>
       <ul class="footer__copy">
-        <li>&copy;2023</li>
-        <li>we run</li>
+        <li>&copy; 2023</li>
+        <li>we 
+          <div class="footer__copy--box"></div>
+          <div class="footer__copy--box1"></div>
+          run</li>
       </ul>
     </footer>
   </body>
