added mobile version

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,22 +19,22 @@
         ><img
           class="header__menu"
           src="../assets/images/ico-menu.svg"
-          alt="menu"
+          alt="menu" title="menú"
       /></a>
     </header>
     <main>
-      <section class="hero">
+      <section class="hero" id="hero">
         <article class="hero__article">
           <h1 class="hero__article--title">comienzos compartidos</h1>
           <p class="hero__article--text">
             Todo lo que necesitan para volver al cole con ilusión
           </p>
           <div class="hero__icon">
-            <a href=""
+            <a href="#school"
               ><img
                 class="hero__icon--fig"
                 src="../assets/images/ico-scroll-down.svg"
-                alt=""
+                alt="icono de bajar" title="Ir abajo"
             /></a>
           </div>
         </article>
@@ -52,7 +52,7 @@
 
       <section class="container">
         <p class="container__text">¡Prepáralos con tus marcas favoritas!</p>
-        <h2 class="container__title">vuelta al cole</h2>
+        <h2 class="container__title" id="school">vuelta al cole</h2>
         <ul class="container__articles">
           <li>
             <img
@@ -86,30 +86,29 @@
 
     <footer class="footer">
       <div class="footer__arrowup">
-        <a href=""
-          ><img src="../assets/images/ico-arrow.svg" alt="Ir arriba"
+        <a href="#hero"
+          ><img src="../assets/images/ico-arrow.svg" alt="Ir arriba" title="Ir arriba"
         /></a>
       </div>
+    
       <nav class="footer__nav">
         <ul class="footer__nav--articles">
-          <li><a href="https://adalab.es/">zapatilas</a></li>
-          <li><a href="https://adalab.es/">ropa</a></li>
-          <li><a href="https://adalab.es/">niño/a</a></li>
-          <li><a href="https://adalab.es/">destacados</a></li>
-          <li><a href="https://adalab.es/">tips</a></li>
+          <li><a href="https://adalab.es/" class="footer__nav--articles--item">zapatilas</a></li>
+          <li><a href="https://adalab.es/" class="footer__nav--articles--item">ropa</a></li>
+          <li><a href="https://adalab.es/" class="footer__nav--articles--item">niño/a</a></li>
+          <li><a href="https://adalab.es/" class="footer__nav--articles--item">destacados</a></li>
+          <li><a href="https://adalab.es/" class="footer__nav--articles--item">tips</a></li>
         </ul>
         <ul class="footer__nav--networks">
-          <li><a href="https://adalab.es/">twitter</a></li>
-          <li><a href="https://adalab.es/">instagram</a></li>
-          <li><a href="https://adalab.es/">youtube</a></li>
+          <li><a href="https://adalab.es/" class="footer__nav--articles--item">twitter</a></li>
+          <li><a href="https://adalab.es/" class="footer__nav--articles--item">instagram</a></li>
+          <li><a href="https://adalab.es/"class="footer__nav--articles--item">youtube</a></li>
         </ul>
       </nav>
       <ul class="footer__copy">
         <li>&copy; 2023</li>
         <li>we 
-          <div class="footer__copy--box"></div>
-          <div class="footer__copy--box1"></div>
-          run</li>
+          <span class="footer__copy--heart">❤︎</span> run</li>
       </ul>
     </footer>
   </body>
