--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,12 +15,10 @@
 
   <body>
     <header class="header">
-      <a href="https://adalab.es/"
-        ><img
+      <a href="https://adalab.es/"><img
           class="header__menu"
           src="../assets/images/ico-menu.svg"
-          alt="menu" title="menú"
-      /></a>
+          alt="menu" title="menú"/></a>
     </header>
     <main>
       <section class="hero" id="hero">
