--- a/src/html/index.html
+++ b/src/html/index.html
@@ -78,7 +78,7 @@
           </li>
         </ul>
 
-        <a href="" class="container__buttontwo">Empezar ahora</a>
+        <a href="#hero" class="container__buttontwo">Empezar ahora</a>
       </section>
     </main>
 
@@ -88,26 +88,30 @@
           ><img src="../assets/images/ico-arrow.svg" alt="Ir arriba" title="Ir arriba"
         /></a>
       </div>
-    
-      <nav class="footer__nav">
-        <ul class="footer__nav--articles">
-          <li><a href="https://adalab.es/" class="footer__nav--articles--item">zapatilas</a></li>
-          <li><a href="https://adalab.es/" class="footer__nav--articles--item">ropa</a></li>
-          <li><a href="https://adalab.es/" class="footer__nav--articles--item">niño/a</a></li>
-          <li><a href="https://adalab.es/" class="footer__nav--articles--item">destacados</a></li>
-          <li><a href="https://adalab.es/" class="footer__nav--articles--item">tips</a></li>
+
+    <span class="footer__span">
+      <nav>
+        <ul class="footer__span--articles">
+          <li><a href="https://adalab.es/" class="footer__span--articles--item">zapatilas</a></li>
+          <li><a href="https://adalab.es/" class="footer__span--articles--item">ropa</a></li>
+          <li><a href="https://adalab.es/" class="footer__span--articles--item">niño/a</a></li>
+          <li><a href="https://adalab.es/" class="footer__span--articles--item">destacados</a></li>
+          <li><a href="https://adalab.es/" class="footer__span--articles--item">tips</a></li>
         </ul>
-        <ul class="footer__nav--networks">
-          <li><a href="https://adalab.es/" class="footer__nav--articles--item">twitter</a></li>
-          <li><a href="https://adalab.es/" class="footer__nav--articles--item">instagram</a></li>
-          <li><a href="https://adalab.es/"class="footer__nav--articles--item">youtube</a></li>
+        </nav>
+        <nav>
+        <ul class="footer__span--networks">
+          <li><a href="https://adalab.es/" class="footer__span--networks--item">twitter</a></li>
+          <li><a href="https://adalab.es/" class="footer__span--networks--item">instagram</a></li>
+          <li><a href="https://adalab.es/"class="footer__span--networks--item">youtube</a></li>
         </ul>
       </nav>
-      <ul class="footer__copy">
+      <ul class="footer__span--copy">
         <li>&copy; 2023</li>
         <li>we 
-          <span class="footer__copy--heart">❤︎</span> run</li>
+          <span class="footer__span--copy--heart">❤︎</span> run</li>
       </ul>
+      </span>
     </footer>
   </body>
 </html>
