--- a/src/html/index.html
+++ b/src/html/index.html
@@ -90,17 +90,16 @@
       </div>
 
     <span class="footer__span">
-      <nav>
-        <ul class="footer__span--articles">
+      <nav class="footer--nav">
+        <ul class="footer__span--nav--articles">
           <li><a href="https://adalab.es/" class="footer__span--articles--item">zapatilas</a></li>
           <li><a href="https://adalab.es/" class="footer__span--articles--item">ropa</a></li>
           <li><a href="https://adalab.es/" class="footer__span--articles--item">niño/a</a></li>
           <li><a href="https://adalab.es/" class="footer__span--articles--item">destacados</a></li>
           <li><a href="https://adalab.es/" class="footer__span--articles--item">tips</a></li>
         </ul>
-        </nav>
-        <nav>
-        <ul class="footer__span--networks">
+        <nav class="footer__span--nav--networks"> 
+        <ul>
           <li><a href="https://adalab.es/" class="footer__span--networks--item">twitter</a></li>
           <li><a href="https://adalab.es/" class="footer__span--networks--item">instagram</a></li>
           <li><a href="https://adalab.es/"class="footer__span--networks--item">youtube</a></li>
