--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,103 +14,12 @@
   </head>
 
   <body>
-    <header class="header">
-      <a href="https://adalab.es/"><img
-          class="header__menu"
-          src="../assets/images/ico-menu.svg"
-          alt="menu" title="menú"/></a>
-    </header>
-    <main>
-      <section class="hero" id="hero">
-        <article class="hero__article">
-          <h1 class="hero__article--title">comienzos compartidos</h1>
-          <p class="hero__article--text">
-            Todo lo que necesitan para volver al cole con ilusión
-          </p>
-          <div class="hero__icon">
-            <a href="#school"
-              ><img
-                class="hero__icon--fig"
-                src="../assets/images/ico-scroll-down.svg"
-                alt="icono de bajar" title="Ir abajo"
-            /></a>
-          </div>
-        </article>
-      </section>
-      <section class="sectionone">
-        <p class="sectionone__text">historias, moda y ropa deportiva</p>
-        <h2 class="sectionone__title">tu tienda de deporte</h2>
-        <p class="sectionone__deport">
-          El deporte nos mantiene en forma. Nos mantiene alerta Nuestra ropa
-          deportiva para hombre y mujer te ofrece las últimas tecnologías, a la
-          altura de tu rendimiento, para que superes tu mejor marca personal.
-        </p>
-        <button class="sectionone__button">Comprar</button>
-      </section>
-
-      <section class="container">
-        <p class="container__text">¡Prepáralos con tus marcas favoritas!</p>
-        <h2 class="container__title" id="school">vuelta al cole</h2>
-        <ul class="container__articles">
-          <li>
-            <img
-              class="container__articles--img"
-              src="../assets/images/lpbts-mod05-img01-desk.png"
-              alt=""
-            />
-            <p class="container__articles--description">Mochilas escolares</p>
-          </li>
-          <li>
-            <img
-              class="container__articles--img"
-              src="../assets/images/lpbts-mod05-img04-mob.png"
-              alt=""
-            />
-            <p class="container__articles--description">Estuches</p>
-          </li>
-          <li>
-            <img
-              class="container__articles--img"
-              src="../assets/images/lpbts-mod05-img03-mob.png"
-              alt=""
-            />
-            <p class="container__articles--description">Bolsa de deporte</p>
-          </li>
-        </ul>
-
-        <a href="#hero" class="container__buttontwo">Empezar ahora</a>
-      </section>
-    </main>
-
-    <footer class="footer">
-      <div class="footer__arrowup">
-        <a href="#hero"
-          ><img src="../assets/images/ico-arrow.svg" alt="Ir arriba" title="Ir arriba"
-        /></a>
-      </div>
-
-    <span class="footer__span">
-      <nav class="footer--nav">
-        <ul class="footer__span--nav--articles">
-          <li><a href="https://adalab.es/" class="footer__span--articles--item">zapatilas</a></li>
-          <li><a href="https://adalab.es/" class="footer__span--articles--item">ropa</a></li>
-          <li><a href="https://adalab.es/" class="footer__span--articles--item">niño/a</a></li>
-          <li><a href="https://adalab.es/" class="footer__span--articles--item">destacados</a></li>
-          <li><a href="https://adalab.es/" class="footer__span--articles--item">tips</a></li>
-        </ul>
-        <nav class="footer__span--nav--networks"> 
-        <ul>
-          <li><a href="https://adalab.es/" class="footer__span--networks--item">twitter</a></li>
-          <li><a href="https://adalab.es/" class="footer__span--networks--item">instagram</a></li>
-          <li><a href="https://adalab.es/"class="footer__span--networks--item">youtube</a></li>
-        </ul>
-      </nav>
-      <ul class="footer__span--copy">
-        <li>&copy; 2023</li>
-        <li>we 
-          <span class="footer__span--copy--heart">❤︎</span> run</li>
-      </ul>
-      </span>
-    </footer>
+      <include src="./partials/header.html"></include>
+  <main>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/section-one.html"></include>
+      <include src="./partials/section-two.html"></include>
+  </main>    
+      <include src="./partials/footer.html"></include>
   </body>
 </html>
